# pi-pine

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.sh  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
assets/pi-pine-logo/: README.txt
src/: App.tsx  main.tsx  styles.css  terminal.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: agents.rs  analyze_image.rs  clipboard.rs  favorites.rs  git_diff.rs  lib.rs  main.rs  mcp.rs  notify_sound.rs  paths.rs  plans.rs  rpc.rs  rpc_log.rs  sessions.rs  single_instance.rs  terminal.rs  themes.rs  transcription.rs  virtual_display.rs  workspaces.rs
src/components/AppShell/: AppTitleBar.tsx  IconRail.tsx  LeftRail.tsx  RightRail.tsx  RunSettingsPopover.tsx  TopContextBar.tsx
src/components/Chat/: ActionBar.tsx  ActivityIndicator.tsx  AgentWorkGlyph.tsx  BashPanel.tsx  BtwOverlay.tsx  CommandBlock.tsx  CompactionSummary.tsx  CompactionSummaryBlock.tsx  Composer.tsx  ContextIndicator.tsx  ExtensionsPill.tsx  FastContextIndicator.tsx  FastFetchIndicator.tsx  Header.tsx  Markdown.tsx  Mermaid.tsx  MermaidLightbox.tsx  (+12 more)
src/i18n/: ru.ts
src/lib/: gitDiff.ts  motionPresets.ts  notify.ts  planStatus.ts  useChunkedRender.ts  useResize.ts  useThrottledValue.ts
src/rpc/: bridge.ts  types.ts
src/store/: agents.ts  chat.ts  customAgents.ts  diff.ts  ext.ts  mcpStatus.ts  models.ts  theme.ts  uiPrefs.ts  virtualDisplay.ts  windowFocus.ts  workspaces.ts
src/themes/: loader.ts
src/utils/: path.ts
(+47 files in other folders)
