[package]
name = "pi-pine"
version = "0.1.0"
description = "Pi Pine — компактный десктоп-клиент для pi"
authors = ["maximz"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "pi_pine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6"
dirs = "5"
regex = "1"
once_cell = "1"
anyhow = "1"
which = "6"
portable-pty = "0.9"
base64 = "0.22"
tauri-plugin-clipboard-manager = "2"
arboard = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 16
lto = "thin"
opt-level = "s"
strip = true
incremental = true

[profile.dev.package."*"]
opt-level = 1
debug = false
